# legomem

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  reproduce.py  seed_bench.py  verify_langsmith.py
legomem/bench/: benchmark.py  datasets.py
legomem/core/: __init__.py  agents.py  orchestrator.py
legomem/eval/: evaluator.py
legomem/memory/: curation.py  retrieval.py  vector_store.py
legomem/monitoring/: wandb_logger.py
legomem/studio/: studio.py
